<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:title="@string/menu_drawer1">
            <menu xmlns:android="http://schemas.android.com/apk/res/android">
                <group android:checkableBehavior="single">

                <item
                    android:id="@+id/navigation_item_1_1"
                    android:title="@string/menu_drawer1_1"/>
                <item
                    android:id="@+id/navigation_item_1_2"
                    android:title="@string/menu_drawer1_2"/>
                <item
                    android:id="@+id/navigation_item_1_3"
                    android:title="@string/menu_drawer1_3"/>
                <item
                    android:id="@+id/navigation_item_1_4"
                    android:title="@string/menu_drawer1_4"/>
                <item
                    android:id="@+id/navigation_item_1_5"
                    android:title="@string/menu_drawer1_5"/>
                <item
                    android:id="@+id/navigation_item_1_6"
                    android:title="@string/menu_drawer1_6"/>
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/menu_drawer2"/>

        <item
            android:id="@+id/navigation_item_3"
            android:title="@string/menu_drawer3"/>
    </group>

</menu>